--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "multer": "^1.4.4-lts.1",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.16",
     "path": "^0.12.7",
     "pdfobject": "^2.2.8",
